# SC-Plugin-Manager

./: Cargo.toml  README.md  build.cmd  build.rs
.github/workflows/: rust.yml
src/: config.rs  driver.rs  main.rs  plugin.rs  utils.rs
src/app/: controller.rs  mod.rs
src/gui/: events.rs  mod.rs  window.rs
ui/: SCPluginManager.slint
