[package]
name = "SCPluginManager"
version = "2.0.0"
authors = ["Outerbeast"]
edition = "2024"
description = "Sven Co-op Plugin Manager"

[dependencies]
walkdir = "2.5.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.0.7"
num_enum = "0.7.6"
slint = { version = "1.15.1", default-features = false, features = ["compat-1-2", "backend-winit", "renderer-femtovg"] }

rfd = "0.17.2"

[build-dependencies]
winresource = "0.1.31"
slint-build = "1.15.1"
