[package]
name = "SCPluginManager"
version = "2.0.0"
authors = ["Outerbeast"]
edition = "2024"
description = "Sven Co-op Plugin Manager"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.0"
slint = { version = "1.15.1", default-features = false, features = ["compat-1-2", "backend-winit", "renderer-femtovg"] }

rfd = "0.17.2"
walkdir = "2.5.0"
dirs = "6.0"

[build-dependencies]
slint-build = "1.15.1"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1.31"

[profile.release]
opt-level = "z"
lto = "thin"
strip = true
